--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -2,195 +2,162 @@
         registrationForm: play.data.Form[User], error: Integer)
 <html>
     @*0 -no error , if 1 - error*@
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-        <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
-
-        @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
-        <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
-
-
-    </head>
-    <body>
-        <div align="center">
-            <h2>Barton & Guestier</h2>
-
-
-                <!-- Модальное окно №1 -->
-            <a href="#x" class="overlay" id="win1"></a>
-            <div class="popup">
-                @helper.form(action = routes.LoginController.checkingLoginForm(), 'id -> "slick-login") {
-                    <div class="modal-header">
-
-                        <h1 class="modal-title">Вход в личный кабинет</h1>
-                    </div>
-
-                    <br>
-                    @helper.inputText(bookForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
-                    @helper.inputPassword(bookForm("password"), '_showConstraints -> false, 'placeholder -> "Пароль", 'required -> "required")
-
-                    <div class="modal-footer">
-                        <input type ="submit" value="Войти">
-                    </div>
-
-
-
-
-                }
-                <a class="close" title="Закрыть" href="#close"></a>
-            </div>
-
-                <!-- Модальное окно №2 -->
-            <a href="#x" class="overlay" id="win2"></a>
-            <div class="popup">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
+    <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
+    <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+</head>
+<body>
+    <div align="center">
+        <h2>Barton & Guestier</h2>
+            <!-- Модальное окно №1 -->
+        <a href="#x" class="overlay" id="win1"></a>
+        <div class="popup">
+            @helper.form(action = routes.LoginController.checkingLoginForm(), 'id -> "slick-login") {
                 <div class="modal-header">
+                    <h1 class="modal-title">Вход в личный кабинет</h1>
+                </div>
+                <br>
+                @helper.inputText(bookForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
+                @helper.inputPassword(bookForm("password"), '_showConstraints -> false, 'placeholder -> "Пароль", 'required -> "required")
+                <div class="modal-footer">
+                    <input type ="submit" value="Войти">
+                </div>
+            }
+        <a class="close" title="Закрыть" href="#close"></a>
+        </div>
+            <!-- Модальное окно №2 -->
+        <a href="#x" class="overlay" id="win2"></a>
+        <div class="popup">
+            <div class="modal-header">
+                <h1 class="modal-title">Регистрация </h1>
+            </div>
+            @helper.form(action = routes.UsersController.addingUser(), 'id -> "slick-login") {
+                @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
+                @helper.inputText(registrationForm("password"), '_showConstraints -> false, 'placeholder -> "Ваш сложный пароль", 'required -> "required")
+                @if(isAdmin) {
+                    Права администратора:@helper.checkbox(registrationForm("isAdmin"))
+                }
 
-                    <h1 class="modal-title">Регистрация </h1>
+                <div class="modal-footer">
+                    <input type ="submit" value="Создать">
                 </div>
 
-                @helper.form(action = routes.UsersController.addingUser(), 'id -> "slick-login") {
-
-                    @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
-
-                    @helper.inputText(registrationForm("password"), '_showConstraints -> false, 'placeholder -> "Ваш сложный пароль", 'required -> "required")
-                    @if(isAdmin) {
-                        Права администратора:@helper.checkbox(registrationForm("isAdmin"))
-                    }
-
-                    <div class="modal-footer">
-                        <input type ="submit" value="Создать">
-                    </div>
-
-
-                }
-                <a class="close" title="Закрыть" href="#close"></a>
-            </div>
-
-            @if(error == 1 || error ==2) {
-                    <!-- Модальное окно при загрузке -->
-
-                <div class="container">
-                        <!-- Modal -->
-                    <div class="modal fade" id="myModal" role="dialog">
-                        <div class="modal-dialog">
-
-                                <!-- Modal content-->
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal"></button>
-                                    <h4 class="modal-title">Ошибка! </h4>
-                                </div>
-                                <div class="modal-body">
-
-                                    @if(error == 1){
-                                        <h4> Неверный пароль или логин!</h4>
-                                    }
-                                    @if(error ==2){
-                                        <h4> Такой логин уже существует!</h4>
-                                    }
-                                </div>
-
+            }
+            <a class="close" title="Закрыть" href="#close"></a>
+        </div>
+        @if(error == 1 || error == 2) {
+                <!-- Модальное окно при загрузке -->
+            <div class="container">
+                    <!-- Modal -->
+                <div class="modal fade" id="myModal" role="dialog">
+                    <div class="modal-dialog">
+                            <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"></button>
+                                <h4 class="modal-title">Ошибка! </h4>
                             </div>
-
+                            <div class="modal-body">
+                                @if(error == 1) {
+                                    <h4> Неверный пароль или логин!</h4>
+                                }
+                                @if(error == 2) {
+                                    <h4> Такой логин уже существует!</h4>
+                                }
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <script>
+                    $(document).ready(function () {
+                        $('#myModal').modal('show');
+                    });
+            </script>
+        }
+        <p></p>
+        <ul class="menu" >
+            <li> <a href=#>Личный кабинет </a>
+                <ul class="submenu">
+                    @if(login.isEmpty) {
+                        <li><a href="#win1" class="button button-green">Вход</a></li>
+                        <li><a href="#win2" class="button button-green">Регистрация</a></li>
+                    }
+                    @if(!(login.isEmpty)) {
+                        <li><a href="@routes.LoginController.logout()">Выход</a></li>
+                        <li><a href="@routes.RatingController.ratingUserPage()">История оценок</a></li>
+                    }
+                </ul>
+            </li>
+        </ul>
+        <ul id="nav" >
+            <li><a>@helper.form(action = routes.ContactController.contactPage) {
+                <input type="submit" value="Контакты" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.SaleController.showSales) {
+                <input type="submit" value="Акции" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.WineController.catalogPage) {
+                <input type="submit" value="Каталог" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
+                <input type="submit" value="О проекте" class="button_menu">
+                }</a>
+            </li>
 
-                <script>
-                        $(document).ready(function () {
-                            $('#myModal').modal('show');
-                        });
-                </script>
+            <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                <input type="hidden" name="numberSql" value="0">
+                <input type="submit" value="Корзина" class="button_menu">
+                }</a>
+            </li>
+
+            <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                <input type="hidden" name="numberSql" value="1">
+                <input type="submit" value="Избранное" class="button_menu">
+                }</a>
+            </li>
+            @if(isAdmin) {
+                <li><a href="#win3" class="button button-green">Добавить товар</a></li>
+                <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
             }
+        </ul>
+        <p></p>
+        <p></p>
+        <p></p>
+        <table class="start" style="border: 5px solid #da0505;">
+            <td>
+                <p style="color: white;
+                    font-family: 'Comic Sans MS';
+                    font-size: 30px;
+                    text-align: center">Дорогие Гости, добро пожаловать на сайт Винного Дома Barton & Guestier!</p>
+            </td>
+        </table>
+        <table class="start" style="margin-top: 20px;
+            margin-right: -50px;">
 
-
-            <p></p>
-
-
-            <ul class="menu" >
-                <li> <a href=#>Личный кабинет </a>
-                    <ul class="submenu">
-                        @if(login.isEmpty) {
-                            <li><a href="#win1" class="button button-green">Вход</a></li>
-                            <li><a href="#win2" class="button button-green">Регистрация</a></li>
-
-                        }
-                        @if(!(login.isEmpty)) {
-                            <li><a href="@routes.LoginController.logout()">Выход</a></li>
-                            <li><a href="@routes.RatingController.ratingUserPage()">История оценок</a></li>
-                        }
-
-                    </ul>
-                </li>
-
-            </ul>
-
-            <ul id="nav" >
-
-
-                <li><a>@helper.form(action = routes.ContactController.contactPage) {
-                    <input type="submit" value="Контакты" class="button_menu">
-                    }</a>
-                </li>
-                <li><a>@helper.form(action = routes.SaleController.showSales) {
-                    <input type="submit" value="Акции" class="button_menu">
-                    }</a>
-                </li>
-                <li><a>@helper.form(action = routes.WineController.catalogPage) {
-                    <input type="submit" value="Каталог" class="button_menu">
-                    }</a>
-                </li>
-                <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
-
-                    <input type="submit" value="О проекте" class="button_menu">
-                    }</a></li>
-
-                <li><a>@helper.form(action = routes.BasketController.basketPage) {
-                    <input type="hidden" name="numberSql" value="0">
-                    <input type="submit" value="Корзина" class="button_menu">
-                    }</a></li>
-
-                <li><a>@helper.form(action = routes.BasketController.basketPage) {
-                    <input type="hidden" name="numberSql" value="1">
-                    <input type="submit" value="Избранное"  class="button_menu">
-                    }</a></li>
-                @if(isAdmin) {
-                    @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
-                    <li><a href="#win3" class="button button-green">Добавить товар</a></li>
-                    <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
-                }
-
-
-            </ul>
-            <p></p>
-            <p></p>
-            <p></p>
-            <table class="start" style="border:  5px solid #da0505;">
-                <td>
-                    <p style="color: white; font-family: 'Comic Sans MS'; font-size: 30px; text-align: center">Дорогие Гости, добро пожаловать на сайт Винного Дома Barton & Guestier!</p>
-                </td>
-            </table>
-            <table  class="start" style="margin-top: 20px; margin-right: -50px;">
-
-                <tr>
-                    <th style="color: white; font-family: 'Comic Sans MS'; font-size: 20px">
+            <tr>
+                <th style="color: white;
+                    font-family: 'Comic Sans MS';
+                    font-size: 20px">
                         Умение разбираться в винах - это уже давно не роскошь,
-                        а скорее необходимость, ведь, как говорил Гете –
-                        «Жизнь слишком коротка, чтобы пить плохое вино».
-                        Где можно приобрести, а главное научиться распознавать достойный напиток?
-                        Есть такое место...
-                        </th>
+                    а скорее необходимость, ведь, как говорил Гете –
+                    «Жизнь слишком коротка, чтобы пить плохое вино».
+                    Где можно приобрести, а главное научиться распознавать достойный напиток?
+                    Есть такое место...
+                </th>
 
-                </tr>
-            </table>
-        </div>
+            </tr>
+        </table>
+    </div>
 
-
-    </body>
+</body>
 
 </html>
 
