--- a/app/views/salesPage.scala.html
+++ b/app/views/salesPage.scala.html
@@ -1,19 +1,16 @@
-@(Sale:Seq[Sale],login: String, isAdmin: Boolean, bookForm: play.data.Form[LoginForm],
-        registrationForm: play.data.Form[User], sale: Sale,error:Integer,
-        saleForm:play.data.Form[Sale])
+@(Sale: Seq[Sale], login: String, isAdmin: Boolean, bookForm: play.data.Form[LoginForm],
+        registrationForm: play.data.Form[User], sale: Sale, error: Integer,
+        saleForm: play.data.Form[Sale])
 <html>
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
-
         <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
-
     </head>
     <body>
         @if(!(login.isEmpty)) {
@@ -24,66 +21,46 @@
         }
         <div align="center">
             <h2>Barton & Guestier</h2>
-
-
                 <!-- Модальное окно №1 -->
             <a href="#x" class="overlay" id="win1"></a>
             <div class="popup">
                 @helper.form(action = routes.LoginController.checkingLoginForm(), 'id -> "slick-login") {
                     <div class="modal-header">
-
                         <h1 class="modal-title">Вход в личный кабинет</h1>
                     </div>
-
                     <br>
                     @helper.inputText(bookForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
                     @helper.inputPassword(bookForm("password"), '_showConstraints -> false, 'placeholder -> "Пароль", 'required -> "required")
-
                     <div class="modal-footer">
                         <input type ="submit" value="Войти">
                     </div>
-
-
-
-
                 }
                 <a class="close" title="Закрыть" href="#close"></a>
             </div>
-
                 <!-- Модальное окно №2 -->
             <a href="#x" class="overlay" id="win2"></a>
             <div class="popup">
                 <div class="modal-header">
-
                     <h1 class="modal-title">Регистрация </h1>
                 </div>
-
                 @helper.form(action = routes.UsersController.addingUser(), 'id -> "slick-login") {
-
                     @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
-
                     @helper.inputText(registrationForm("password"), '_showConstraints -> false, 'placeholder -> "Ваш сложный пароль", 'required -> "required")
                     @if(isAdmin) {
                         Права администратора:@helper.checkbox(registrationForm("isAdmin"))
                     }
-
                     <div class="modal-footer">
                         <input type ="submit" value="Создать">
                     </div>
-
                 }
                 <a class="close" title="Закрыть" href="#close"></a>
             </div>
-
-
             @if(error == 1 || error == 2) {
                     <!-- Модальное окно при загрузке -->
-
                 <div class="container">
                         <!-- Modal -->
                     <div class="modal fade" id="myModal" role="dialog">
                         <div class="modal-dialog">
-
                                 <!-- Modal content-->
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -93,49 +70,35 @@
                                 <div class="modal-body">
                                     <h4> Неверный пароль или логин!</h4>
                                 </div>
-
                             </div>
-
                         </div>
                     </div>
                 </div>
-
                 <script>
                         $(document).ready(function () {
                             $('#myModal').modal('show');
                         });
                 </script>
             }
-
             <a href="#x" class="overlay" id="win3" ></a>
             <div class="popup" style="overflow-y: scroll;
                 max-height: 100%;
                 margin-top: 0;
                 margin-bottom: 50px;
                 top: 0px ">
-
                 <div class="modal-header">
-
                     <h1 class="modal-title">Добавление акции</h1>
                 </div>
-
                 <br>
-
-
                 @helper.form(action = routes.SaleController.newSale(), 'id -> "slick-login") {
                     @helper.inputText(saleForm("head"), '_showConstraints -> false, 'placeholder -> "Заголовок акции")
                     @helper.inputText(saleForm("text"), '_showConstraints -> false, 'placeholder -> "Условия акции")
-
                     <div class="modal-footer">
                         <input type ="submit" value="Создать">
                     </div>
-
                 }
-
                 <a class="close" title="Закрыть" href="#close"></a>
             </div>
-
-
             <p></p>
             <ul class="menu" >
                 <li> <a href=#>Личный кабинет </a>
@@ -143,20 +106,14 @@
                         @if(login.isEmpty) {
                             <li><a href="#win1" class="button button-green">Вход</a></li>
                             <li><a href="#win2" class="button button-green">Регистрация</a></li>
-                            @*<li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>*@
-                            @*<li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>*@
                         }
                         @if(!(login.isEmpty)) {
                             <li><a href="@routes.LoginController.logout()">Выход</a></li>
                         }
-
                     </ul>
                 </li>
-
             </ul>
             <ul id="nav" >
-
-
                 <li><a>@helper.form(action = routes.ContactController.contactPage) {
                     <input type="submit" value="Контакты" class="button_menu">
                     }</a>
@@ -170,125 +127,90 @@
                     }</a>
                 </li>
                 <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
-
                     <input type="submit" value="О проекте" class="button_menu">
                     }</a></li>
-
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
                     <input type="hidden" name="numberSql" value="0">
                     <input type="submit" value="Корзина" class="button_menu">
                     }</a></li>
-
+                <li><a href="#win3" class="button button-green">Добавление акции</a></li>
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
                     <input type="hidden" name="numberSql" value="1">
-                    <input type="submit" value="Избранное"  class="button_menu">
+                    <input type="submit" value="Избранное" class="button_menu">
                     }</a></li>
                 @if(isAdmin) {
-
                     <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
                 }
-
-
             </ul>
-
             <br>
             <br>
             <p></p>
             <br>
             <br>
-
-
-
-
-
-<table class="favorite">
-    <td>
-            <div id="main"><!— Основной раздел содержимого —>
-
-                <section id="content"><!— Основной подраздел содержимого —>
-                    <div id="left">
-                        @if(isAdmin){
-                    <div id="sale">
-
-
-                        <ul>
-                        @Sale.map { item =>
-                            <li>
-
-                                <div class="product-sale">
-                                <div class="img"><a href="#"><img alt="" src=@item.getLinkForProduct(item.getIdSales)></a></div>
-                                <div class="info">
-
-                                    @if(!isAdmin){
-                                        <p> @item.getHead</p>
-                                        <p>@item.getText</p>
-                                    }
-                                    @*<div class="price">*@
-                                    @*<span class="st">Our price:</span><strong>$550.00</strong>*
-                                    @*</div>*@
-
-
-                                        <div class="actions">
-
-                                            @helper.form(action = routes.SaleController.changeSale(item.getIdSales)) {
-                                                <p><textarea rows="1" cols="25" name="getHead" style="color: black" >@item.getHead</textarea></p>
-                                                <p><textarea rows="5" cols="25" name="getText" style="color: black" >@item.getText</textarea></p>
-
-                                                <input type="submit" class="btn btn-danger" style="" value="Изменить" />
+            <table class="favorite">
+                <td>
+                    <div id="main"><!— Основной раздел содержимого —>
+                        <section id="content"><!— Основной подраздел содержимого —>
+                            <div id="left">
+                                @if(isAdmin) {
+                                    <div id="sale">
+                                        <ul>
+                                            @Sale.map { item =>
+                                                <li>
+                                                    <div class="product-sale">
+                                                        <div class="img"><a href="#"><img alt="" src=@item.getLinkForProduct(item.getIdSales)></a></div>
+                                                        <div class="info">
+                                                            @if(!isAdmin) {
+                                                                <p> @item.getHead</p>
+                                                                <p>@item.getText</p>
+                                                            }
+                                                            <div class="actions">
+                                                                @helper.form(action = routes.SaleController.changeSale(item.getIdSales)) {
+                                                                    <p><textarea rows="1" cols="25" name="getHead" style="color: black" >@item.getHead</textarea></p>
+                                                                    <p><textarea rows="5" cols="25" name="getText" style="color: black" >@item.getText</textarea></p>
+                                                                    <input type="submit" class="btn btn-danger" style="" value="Изменить" />
+                                                                }
+                                                                @helper.form(action = routes.SaleController.deleteSale(item.getIdSales)) {
+                                                                    <input type="submit" class="btn btn-danger" value="Удалить" />
+                                                                }
+                                                                @helper.form(action = routes.SaleController.upload(item.getIdSales), 'enctype -> "multipart/form-data") {
+                                                                    <input type="file" name="picture">
+                                                                    <p>
+                                                                        <input type="submit" class="btn btn-danger">
+                                                                    </p>
+                                                                }
+                                                            </div>
                                             }
-                                            @helper.form(action = routes.SaleController.deleteSale(item.getIdSales)) {
-                                                <input type="submit" class="btn btn-danger"   value="Удалить" />
-                                            }
-
-                                            @helper.form(action = routes.SaleController.upload(item.getIdSales), 'enctype -> "multipart/form-data") {
-
-                                                <input type="file" name="picture">
-
-                                                <p>
-                                                    <input type="submit" class="btn btn-danger">
-                                                </p>
-
-                                            }
-
                                         </div>
-
-                                    }
-
-
-
-                                </div>
-                                </div>
-
-                            </li>
-
-
-
-                        </ul>
-                    </div>
-                        }
-                        @if(!isAdmin){
-                        <div id="sale-user">
-                            <ul>
-                                @Sale.map { item =>
-                                    <li>
-                                            <div class="product-sale-user">
-                                                <div class="img"><a href="#"><img alt="" src=@item.getLinkForProduct(item.getIdSales)></a></div>
-                                                <div class="info">
-                                                        <p style="color:#da0505; font-family: 'Comic Sans MS'; font-size: 15px"> <u>@item.getHead</u></p>
-                                                        <p style="font-family: 'Comic Sans MS'">@item.getText</p>
-                                                </div>
-                                            </div>
-
-                                     </li>
+                                        </div>
+                                        </li>
+                                        </ul>
+                                    </div>
                                 }
-                            </ul>
-                        </div>
-                        }
+                                @if(!isAdmin) {
+                                    <div id="sale-user">
+                                        <ul>
+                                        @Sale.map { item =>
+                                            <li>
+                                                <div class="product-sale-user">
+                                                    <div class="img"><a href="#"><img alt="" src=@item.getLinkForProduct(item.getIdSales)></a></div>
+                                                    <div class="info">
+                                                        <p style="color: #da0505;
+                                                            font-family: 'Comic Sans MS';
+                                                            font-size: 15px"> <u>@item.getHead</u></p>
+                                                        <p style="font-family: 'Comic Sans MS'">@item.getText</p>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        }
+                                        </ul>
+                                    </div>
+                                }
+                            </div>
+                        </section>
                     </div>
-                </section>
-            </div>
-    </td>
-</table>
+                </td>
+            </table>
         </div>
     </body>
 </html>
