--- a/app/views/updateWine.scala.html
+++ b/app/views/updateWine.scala.html
@@ -1,72 +1,60 @@
-@(form: play.data.Form[UpdateWine],win:wine, login:String)
+@(form: play.data.Form[UpdateWine], win: wine, login: String)
 <html>
     <head>
         <title>
             Редактирование товара
         </title>
-        @*<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/style.css")">*@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-        @*<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/style.css")">*@
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
-
-        @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
         <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     </head>
-    <body style="background:  #d93639; font-family: 'Comic Sans MS'">
-        @*<a href="@routes.WineController.catalogPage(login,true)" class = "link">На главную страницу </a>*@
+    <body style="background: #d93639;
+        font-family: 'Comic Sans MS'">
         <h1 class="g1">Редактировать товар</h1>
         <hr color="white" size="6px">
-
-        @helper.form(action = routes.WineController.updateWineInfo(win.getIdProduct), 'id -> "slick-login"){
-
-                <tr>
-                    <td> Название:  </td> <td>@helper.inputText(form("name"),'_showConstraints ->false)</td>
-                </tr>
-                <tr>
-                    <td> Цвет:  </td> <td> @helper.inputText(form("colour"),'_showConstraints ->false)</td>
-                </tr>
-                <tr>
-                    <td> Страна:  </td> <td>@helper.inputText(form("country"),'_showConstraints ->false)</td>
-                </tr>
-                <tr>
-                    <td> Бренд:  </td> <td>@helper.inputText(form("brand"),'_showConstraints ->false)</td>
-                </tr>
-                <tr>
-                    <td> Срок годности:  </td> <td> @helper.inputText(form("shelfLife"),'_showConstraints ->false)</td>
-                </tr>
-                <tr>
-                    <td> Сахар: </td> <td> @helper.inputText(form("sugar"),'_showConstraints ->false)</td>
-                </tr>
-                <tr>
-                    <td> Сорт винограда: </td> <td>@helper.inputText(form("grapeSort"),'_showConstraints ->false)</td>
-                </tr>
-                <tr>
-                    <td> Цена: </td> <td> @helper.inputText(form("price"),'_showConstraints ->false,'required -> "required",'type -> "number", 'step->"0.001",'min->"0")</td>
-                </tr>
-                <tr>
-                    <td> Объем: </td> <td>  @helper.inputText(form("value"),'_showConstraints ->false,'required -> "required", 'type -> "number", 'step->"0.001",'min->"0")</td>
-                </tr>
-                <tr>
-                    <td> Крепость: </td> <td>  @helper.inputText(form("degree"),'_showConstraints ->false,'required -> "required", 'type -> "number", 'step->"0.001",'min->"0")</td>
-                </tr>
-
-                <tr>
-                    @*<td> fike: </td> <td>  @helper.inputFile(form("file"),'_showConstraints ->false)</td>*@
-                    @*<form enctype="multipart/form-data"  >*@
-                        @*<p>Загрузите фото вина</p>*@
-                            @*<input type="file" name="photo" multiple accept="image/*.image/png">*@
-                    @*</form>*@
-
-                </tr>
+        @helper.form(action = routes.WineController.updateWineInfo(win.getIdProduct), 'id -> "slick-login") {
+            <tr>
+                <td> Название:  </td> <td>@helper.inputText(form("name"), '_showConstraints -> false)</td>
+            </tr>
+            <tr>
+                <td> Цвет:  </td> <td> @helper.inputText(form("colour"), '_showConstraints -> false)</td>
+            </tr>
+            <tr>
+                <td> Страна:  </td> <td>@helper.inputText(form("country"), '_showConstraints -> false)</td>
+            </tr>
+            <tr>
+                <td> Бренд:  </td> <td>@helper.inputText(form("brand"), '_showConstraints -> false)</td>
+            </tr>
+            <tr>
+                <td> Срок годности:  </td> <td> @helper.inputText(form("shelfLife"), '_showConstraints -> false)</td>
+            </tr>
+            <tr>
+                <td> Сахар: </td> <td> @helper.inputText(form("sugar"), '_showConstraints -> false)</td>
+            </tr>
+            <tr>
+                <td> Сорт винограда: </td> <td>@helper.inputText(form("grapeSort"), '_showConstraints -> false)</td>
+            </tr>
+            <tr>
+                <td>
+                    Цена: </td> <td> @helper.inputText(form("price"), '_showConstraints -> false, 'required -> "required", 'type -> "number", 'step -> "0.001", 'min -> "0")</td>
+            </tr>
+            <tr>
+                <td>
+                    Объем: </td> <td>  @helper.inputText(form("value"), '_showConstraints -> false, 'required -> "required", 'type -> "number", 'step -> "0.001", 'min -> "0")</td>
+            </tr>
+            <tr>
+                <td>
+                    Крепость: </td> <td>  @helper.inputText(form("degree"), '_showConstraints -> false, 'required -> "required", 'type -> "number", 'step -> "0.001", 'min -> "0")</td>
+            </tr>
+            <tr>
+            </tr>
             </table>
-
             <hr color="white" size="6px">
-
             <input type ="submit" value="Применить" >
             }
     </body>
