--- a/app/views/usersRatingPage.scala.html
+++ b/app/views/usersRatingPage.scala.html
@@ -4,240 +4,184 @@
         <meta charset="UTF-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
-        <title>Личный кабинет</title>
-
+        <title>История оценок</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
-
-        @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
         <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     </head>
     <body>
         @if(!(login.isEmpty)) {
             <div align="right">
-
                 Вы вошли как :@login
-
                 <br>
             </div>
         }
+    <div align="center">
+        <h2>Barton & Guestier</h2>
+        <p></p>
+        <ul class="menu" >
+            <li> <a href=#>Личный кабинет </a>
+                <ul class="submenu">
+                    @if(login.isEmpty) {
+                        <li><a href="#win1" class="button button-green">Вход</a></li>
+                        <li><a href="#win2" class="button button-green">Регистрация</a></li>
+                    }
+                    @if(!(login.isEmpty)) {
+                        <li><a href="@routes.LoginController.logout()">Выход</a></li>
+                        <li><a href="@routes.RatingController.ratingUserPage()">Действия</a></li>
+                    }
+                </ul>
+            </li>
+        </ul>
+        <ul id="nav" >
+            <li><a>@helper.form(action = routes.ContactController.contactPage) {
+                <input type="submit" value="Контакты" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.SaleController.showSales) {
+                <input type="submit" value="Акции" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.WineController.catalogPage) {
+                <input type="submit" value="Каталог" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
 
-        <div align="center">
-            <h2>Barton & Guestier</h2>
-
-            <p></p>
-
-
-            <ul class="menu" >
-                <li> <a href=#>Личный кабинет </a>
-                    <ul class="submenu">
-                        @if(login.isEmpty) {
-                            <li><a href="#win1" class="button button-green">Вход</a></li>
-                            <li><a href="#win2" class="button button-green">Регистрация</a></li>
-
-                        }
-                        @if(!(login.isEmpty)) {
-                            <li><a href="@routes.LoginController.logout()">Выход</a></li>
-                            <li><a href="@routes.RatingController.ratingUserPage()">Действия</a></li>
-                        }
-
-                    </ul>
-                </li>
-
-            </ul>
-
-            <ul id="nav" >
-
-
-                <li><a>@helper.form(action = routes.ContactController.contactPage) {
-                    <input type="submit" value="Контакты" class="button_menu">
-                    }</a>
-                </li>
-                <li><a>@helper.form(action = routes.SaleController.showSales) {
-                    <input type="submit" value="Акции" class="button_menu">
-                    }</a>
-                </li>
-                <li><a>@helper.form(action = routes.WineController.catalogPage) {
-                    <input type="submit" value="Каталог" class="button_menu">
-                    }</a>
-                </li>
-                <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
-
-                    <input type="submit" value="О проекте" class="button_menu">
-                    }</a></li>
-
-                <li><a>@helper.form(action = routes.BasketController.basketPage) {
-                    <input type="hidden" name="numberSql" value="0">
-                    <input type="submit" value="Корзина" class="button_menu">
-                    }</a></li>
-
-                <li><a>@helper.form(action = routes.BasketController.basketPage) {
-                    <input type="hidden" name="numberSql" value="1">
-                    <input type="submit" value="Избранное"  class="button_menu">
-                    }</a></li>
-                @if(isAdmin) {
-
-                    <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
-                }
-
-
-            </ul>
-            <p></p>
-            <p></p>
-            <p></p>
-
-                @*вывод колонки*@
-            @colomn(i: Int) = @{
-                val it = nameColomn
-                it(i)
+                <input type="submit" value="О проекте" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                <input type="hidden" name="numberSql" value="0">
+                <input type="submit" value="Корзина" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                <input type="hidden" name="numberSql" value="1">
+                <input type="submit" value="Избранное" class="button_menu">
+                }</a>
+            </li>
+            @if(isAdmin) {
+                <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
             }
-
-                @*вывод отсортированной таблицы*@
-            @ratingWine(i: Int) = @{
-                val it = win
-                it(i)
-            }
-
-
-                @*вывод строки*@
-            @display(i: Int) = @{
-                val it = win
-                it(i)
-            }
-                @*всего колонок*@
-            @sizeItems() = @{
-                val sizeItems = nameColomn.length
-                sizeItems
-            }
-
-                @*всего записываемых элементов*@
-            @sizeItems2() = @{
-                val sizeItems2 = win.length
-                sizeItems2
-
-            }
-
-            <br>
-            <p></p>
-            @if(sizeItems() != 0) {
-
+        </ul>
+        <p></p>
+        <p></p>
+        <p></p>
+            @*вывод колонки*@
+        @colomn(i: Int) = @{
+            val it = nameColomn
+            it(i)
+        }
+            @*вывод отсортированной таблицы*@
+        @ratingWine(i: Int) = @{
+            val it = win
+            it(i)
+        }
+            @*всего колонок*@
+        @sizeItems() = @{
+            val sizeItems = nameColomn.length
+            sizeItems
+        }
+            @*всего записываемых элементов*@
+        @sizeItems2() = @{
+            val sizeItems2 = win.length
+            sizeItems2
+        }
+        <br>
+        <p></p>
+        @if(sizeItems() != 0) {
             <table class="favorite">
-                    <td>
-
-                        <div id="main"><!— Основной раздел содержимого —>
-
-                            <section id="content"><!— Основной подраздел содержимого —>
-                                <div id="left">
-
-
-                                    <div id="favorite">
-
-                                        <ul>
+                <td>
+                    <div id="main"><!— Основной раздел содержимого —>
+                        <section id="content"><!— Основной подраздел содержимого —>
+                            <div id="left">
+                                <div id="favorite">
+                                    <ul>
                                         @win.map { item =>
-                                        <li>
-                                            <div class="product">
-                                                <a href="#" class="product-img">
-                                                    <img src=@item.getLinkForProduct(item.getIdProduct) alt="" height="400" ></a>
-                                                <p class="wineName">@item.getWineName(item.getIdProduct)</p>
-
-
-                                                <div class="product-text">
-                                                    <p > @colomn(2): @item.getWineColour(item.getIdProduct)</p>
-                                                    <p > @colomn(3): @item.getWineCountry(item.getIdProduct)</p>
-                                                    <p > @colomn(4): @item.getWineBrand(item.getIdProduct)</p>
-                                                    <p > @colomn(5): @item.getWineShelfLife(item.getIdProduct)</p>
-                                                    <p > @colomn(6): @item.getWineSugar(item.getIdProduct)</p>
-                                                    <p > @colomn(7): @item.getWineGrapeSort(item.getIdProduct)</p>
-                                                    <p > @colomn(9): @item.getWineValue(item.getIdProduct) л.</p>
-                                                    <p > @colomn(10): @item.getWineDegree(item.getIdProduct) %</p>
-
-
-
-
-
-                                                </div>
-
-                                                <p class="product-price"><b>@item.getWinePrice(item.getIdProduct) руб.</b></p>
-                                                <p class="product-price1">@item.getWineAvg(item.getIdProduct)/5</p>
-                                                <div class="product-Rating">
-                                                    <div class="Rating">
-                                                        <div style="display: inline-flex;margin: 0 auto;width: 500px;">
-                                                                    Ваша оценка @item.getRating.
+                                            <li>
+                                                <div class="product">
+                                                    <a href="#" class="product-img">
+                                                        <img src=@item.getLinkForProduct(item.getIdProduct) alt="" height="400" ></a>
+                                                    <p class="wineName">@item.getWineName(item.getIdProduct)</p>
+                                                    <div class="product-text">
+                                                        <p > @colomn(2): @item.getWineColour(item.getIdProduct)</p>
+                                                        <p > @colomn(3): @item.getWineCountry(item.getIdProduct)</p>
+                                                        <p > @colomn(4): @item.getWineBrand(item.getIdProduct)</p>
+                                                        <p > @colomn(5): @item.getWineShelfLife(item.getIdProduct)</p>
+                                                        <p > @colomn(6): @item.getWineSugar(item.getIdProduct)</p>
+                                                        <p > @colomn(7): @item.getWineGrapeSort(item.getIdProduct)</p>
+                                                        <p > @colomn(9): @item.getWineValue(item.getIdProduct) л.</p>
+                                                        <p > @colomn(10): @item.getWineDegree(item.getIdProduct) %</p>
+                                                    </div>
+                                                    <p class="product-price"><b>@item.getWinePrice(item.getIdProduct)
+                                                        руб.</b></p>
+                                                    <p class="product-price1">@item.getWineAvg(item.getIdProduct)/5</p>
+                                                    <div class="product-Rating">
+                                                        <div class="Rating">
+                                                            <div style="display: inline-flex;
+                                                                margin: 0 auto;
+                                                                width: 500px;">
+                                                                Ваша оценка @item.getRating.
+                                                            </div>
                                                         </div>
                                                     </div>
-                                                </div>
-
-
-
-
-                                                <div class="product-buttons">
-                                                @if(!(login.isEmpty)) {
-                                                    <div class="layer1-button">
-                                                    @if(item.isAddingToBasket(item.getIdProduct,login)==login) {
-                                                        @helper.form(action = routes.BasketController.addIn(item.getIdProduct)) {
-                                                            <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
-                                                                height: 50px">
-                                                                <span class="glyphicon glyphicon-shopping-cart" ></span>
-                                                            </button>
-                                                        }
-                                                    }
-                                                    </div>
-
-                                                    <div class="layer2-button">
-                                                        @if(item.isAddingToFavorite(item.getIdProduct,login)==login) {
-                                                            @helper.form(action = routes.BasketController.addInFavorite(item.getIdProduct)) {
+                                                    <div class="product-buttons">
+                                                    @if(!(login.isEmpty)) {
+                                                        <div class="layer1-button">
+                                                        @if(item.isAddingToBasket(item.getIdProduct, login) == login) {
+                                                            @helper.form(action = routes.BasketController.addIn(item.getIdProduct)) {
+                                                                <input type="hidden" name="onHistory2" value="true">
                                                                 <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
                                                                     height: 50px">
-                                                                    <span class="glyphicon glyphicon-heart" ></span>
+                                                                    <span class="glyphicon glyphicon-shopping-cart" ></span>
                                                                 </button>
                                                             }
                                                         }
-                                                    }
+                                                        </div>
+                                                        <div class="layer2-button">
+                                                            @if(item.isAddingToFavorite(item.getIdProduct, login) == login) {
+                                                                @helper.form(action = routes.BasketController.addInFavorite(item.getIdProduct)) {
+                                                                    <input type="hidden" name="onHistory" value="true">
+                                                                    <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
+                                                                        height: 50px">
+                                                                        <span class="glyphicon glyphicon-heart" ></span>
+                                                                    </button>
+                                                                }
+                                                            }
+                                                        }
                                                     </div>
-                                                    @if(!(login.isEmpty) ) {
-                                                        <br>
-                                                        @if(item.isAddingToBasket(item.getIdProduct,login)!=login){
-                                                            <p text-align="left">Добавлен в корзину.</p>
+                                                        @if(!(login.isEmpty)) {
+                                                            <br>
+                                                            @if(item.isAddingToBasket(item.getIdProduct, login) != login) {
+                                                                <p text-align="left" style="color: blue">
+                                                                    Добавлен в корзину.</p>
+                                                            }
+                                                            @if(item.isAddingToFavorite(item.getIdProduct, login) != login) {
+                                                                <p text-align="left" style="color: blue">
+                                                                    Добавлен в избранное.</p>
+                                                            }
                                                         }
-                                                        @if(item.isAddingToFavorite(item.getIdProduct,login)!=login){
-                                                            <p text-align="left" style="color: blue">Добавлен в избранное.</p>
-                                                        }
-                                                    }
-
-
-                                                }
-
-                                        </div>
-
-                                        </div>
-                                        </li>
-
-
-                                        </ul>
+                                        }
                                     </div>
+                                    </div>
+                                    </li>
+                                    </ul>
                                 </div>
-                            </section>
-                        </div>
-
-                    </td>
+                            </div>
+                        </section>
+                    </div>
+                </td>
             </table>
-            }
-            @if(sizeItems2() == 0) {
-                <h1>Оценок нет!</h1>
-            }
-
-
-
-
-
-
-        </div>
-
+        }
+        @if(sizeItems2() == 0) {
+            <h1>Оценок нет!</h1>
+        }
+    </div>
     </body>
 </html>
